@@ -46,6 +46,27 @@ module Searchgasm
         def year_sql(column_name)
           "strftime('%Y', #{column_name})"
         end
+        
+        # String functions
+        def lower_sql(column_name)
+          "lower(#{column_name})"
+        end
+        
+        def ltrim_sql(column_name)
+          "ltrim(#{column_name})"
+        end
+        
+        def rtrim_sql(column_name)
+          "rtrim(#{column_name})"
+        end
+        
+        def trim_sql(column_name)
+          "trim(#{column_name})"
+        end
+        
+        def upper_sql(column_name)
+          "upper(#{column_name})"
+        end
       end
     end
   end
