@@ -1,0 +1,15 @@
+module Searchgasm
+  module Modifiers
+    class Trim < Base
+      class << self
+        def modifier_names
+          super + ["strip"]
+        end
+        
+        def return_type
+          :string
+        end
+      end
+    end
+  end
+end
