@@ -2,6 +2,7 @@
 
 * Fixed bug when duping or cloning to copy over instance vars instead of method values
 * Fixed bug with older versions of ActiveRecord and creating an alias method change on find in AssociationCollection
+* Added modifiers: upper, lower, trim, ltrim, rtrim
 
 == 1.3.5 released 2008-10-08
 
